--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,52 @@
-p {
-    font-size: 40px;
-    color: red;
-    font-family: sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
+
+body {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-size: 16px;
+    color: #333;
+    font-family: 'DM Sans', sans-serif;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+section > p {
+    font-size: 18px;
+}
+
+.main section {
+    width: 80%;
+}
+
+.main section:nth-child(1) {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    text-align: justify;
+    width: 80%;
+}
+
+.main section:nth-child(2) {
+    box-shadow: 0 0 4px rgba(0, 0, 0, .25);
+    border-radius: 4px;
+    padding: 30px;
+    margin-top: 20px;
+}
+
+h1 {
+    font-weight: 700;
+    font-size: 30px;
+    letter-spacing: 1px;
+}
+
+i {
+    font-weight: bold;
+    text-decoration: underline
 }
