--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap');
 
 body {
     box-sizing: border-box;
@@ -6,7 +6,7 @@ body {
     margin: 0;
     font-size: 16px;
     color: #333;
-    font-family: 'DM Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 .main {
@@ -37,11 +37,11 @@ section > p {
     box-shadow: 0 0 4px rgba(0, 0, 0, .25);
     border-radius: 4px;
     padding: 30px;
-    margin-top: 20px;
+    margin: 20px 0;
 }
 
 h1 {
-    font-weight: 700;
+    font-weight: 900;
     font-size: 30px;
     letter-spacing: 1px;
 }
